--- a/class/recipe/index.html
+++ b/class/recipe/index.html
@@ -5,12 +5,50 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Pumpkin Poppers</title>
+        <meta name="description" content="the pumpkin popers r dope">
+        <link rel="stylesheet" href="boilerplate.css">   
+    </head>
+    <body>
+        <h1>Pumpkin Poppers</h1>
+        <img src="images/pumpkin.jpeg" alt="popers"
+        <a href="https://google.com">This is a link</a>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>Pumpkin Poppers</title>
         <meta name="Recipe" content="Recipe">
         <link rel="stylesheet" href="boilerplate.css">   
     </head>
     <body>
         <h1>Pumpkin Poppers</h1>
         <img src=https://irepo.primecp.com/2016/05/281388/PumpkinPoppers_image_Large600_ID-1663370.jpg?v=1663370” alt=“Popper”>
+        <p>My brother-in-law Josh is a “Meat in the Middle” kind of guy. So when I visit I try to make things he will love, but that stay true to my Meat on the Side point of view. These Pumpkin Poppers totally fit the bill, with chorizo for big flavor and pumpkin and spices that linger delightfully in your mouth.</p>
+        <p>Cooking Time: 15 min</p>
+        <p>Recipe Course: Appetizer</p>
+        <p>Meal: Snack</p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>2 links chorizo (4 ounces each)</li>
+            <li>One 15-ounce can 100 percent pure pumpkin puree</li>
+            <li>4 ounces soft goat cheese</li>
+            <li>1 teaspoon kosher salt</li>
+            <li>1 tablespoon chopped fresh sage</li>
+            <li>2 tablespoons finely chopped fresh chives</li>
+            <li>Pinch of ground nutmeg</li>
+            <li>Two 8-ounce cans crescent roll dough</li>
+        </ul>
+        <h2>Instructions</h2>
+        <ol>
+            <li>Preheat the oven to 350°F. Place a large skillet over medium heat. Remove the casing from the sausage and add the meat to the skillet. Cook for about 4 minutes, breaking the meat apart into small pieces with a spoon as it cooks. Reduce the heat to low, add the pumpkin, cheese, and salt, and stir until the cheese has melted, about 2 minutes. Turn off the heat and stir in the sage, chives, and nutmeg. Transfer the filling mixture to a plate and refrigerate to cool slightly while you prepare the dough.</li>
+            <li>Grease two mini muffin pans. Unroll the dough from one can onto a lightly floured surface. With your fingers, pinch together the dough along the perforations dividing the rolls, so the sheet holds together. Then roll out the dough into a rectangle that is about 12 × 18-inches. Using a sharp knife, cut the rectangle into 24 squares, making 5 cuts crosswise and 3 cuts lengthwise. Separate the squares and place each one into a muffin cup. Repeat this process with the dough from the second can.</li>
+            <li>Spoon 2 teaspoons of the filling into the center of each square. Fold the dough corners over, enclosing the filling. Bake the poppers until the dough is golden brown, about 15 minutes. Serve hot!</li>
+        </ol>
+        <a href="https://www.cookstr.com/Appetizers/Pumpkin-Poppers-Nikki-Dinki">Recipe Website</a>
+        
+    </body>
+</html>
         <p>My brother-in-law Josh is a “Meat in the Middle” kind of guy. So when I visit I try to make things he will love, but that stay true to my Meat on the Side point of view. These Pumpkin Poppers totally fit the bill, with chorizo for big flavor and pumpkin and spices that linger delightfully in your mouth.</p>
         <p>Cooking Time: 15 min</p>
         <p>Recipe Course: Appetizer</p>
