--- a/class/wikipedia/index.html
+++ b/class/wikipedia/index.html
@@ -12,10 +12,10 @@
    
     <body>
         <header>
-            <h1>Life Time, Inc. is a chain of health clubs in the United States and Canada</h1>
+            <h1>Life Time, Inc. is a chain of health clubs in the United States and Canada.</h1>
         </header>
         <img src="images/logo.png"alt="Wikipedia"
-        class="logo"
+        class="logo">
   
         <main>
     <section>
@@ -38,6 +38,22 @@
     <section>
         <h2>Lawsuit</h2>
             <p>Several employees of Life Time Fitness took the firm to court for withholding wages in 2004.[9] In 2009, a court ruled in favor of employees in the case of Baden-Winterwood v. Life Time Fitness Inc., with a judgment that employees must be paid in accordance with federal and state wage-and-hour laws which require overtime pay for hours worked in excess of 40 in a workweek.</p>
+    </section>
+        <ul>
+            <li>Formerly: FCA Itd.</li>
+            <li>Type: Public</li>
+            <li>Traded as: NYSE: LTH</li>
+            <li>Founded: 1990; 33 years ago (as FCA, Ltd.) 1992; 31 years ago (as Life Time Fitness, Inc.)</li>
+            <li>Founder: Bahram Akradi</li>
+            <li>Headquarters: Chanhassen, Minnesota, U.S.</li>Area served: United States and Canada
+            <li>Key people: Bahram Akradi - Founder/Chairman/CEO</li>
+            <li>Owner: Leonard Green & Partners TPG Capital</li>
+            <li>Number of employees: 36,000</li>
+            <li><a href="http://lifetime.life">Life Time Website</a></li>
+
+        </ul>
+    <section>
+
     </section>
 
 </html>
