--- a/class/portfolio/contact.html
+++ b/class/portfolio/contact.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!--seo-->
-    <title>Courtney Ruddy Journalist</title>
+    <title>Contact Page</title>
     <meta name="Contact page" content="This is my contact information">
     <!--fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,12 +20,9 @@
     <link rel="stylesheet" href="portfolio.css">
 </head>
 
-
 <h8>Work with me!</h8>
 <p> </p>
-<h9>Instagram:</h9>
-<p>@courtneyruddy</p>
-<h9>Phone Number:</h9>
-<p>952-555-4631</p>
+<h9>Phone:</h9>
+<p><a href="tel:9524637226">9524637226</a></p>
 <h9>Email:</h9>
-<p>courtneymruddy@gmail.com</p>
+<p><p> <a href="mailto:courtneymruddy@gmail.com">courtneymruddy@gmail.com</a></p></p>
