--- a/class/portfolio/contact.html
+++ b/class/portfolio/contact.html
@@ -25,4 +25,6 @@
 <h9>Phone:</h9>
 <p><a href="tel:9524637226">9524637226</a></p>
 <h9>Email:</h9>
-<p><p> <a href="mailto:courtneymruddy@gmail.com">courtneymruddy@gmail.com</a></p></p>
+<p><a href="mailto:courtneymruddy@gmail.com">courtneymruddy@gmail.com</a></p>
+<h9>Instagram:</h9>
+<p><a href="https://www.instagram.com/courtney.ruddy/?hl=en">@courtneymruddy</a></p>
