--- a/class/portfolio/pages/contact.html
+++ b/class/portfolio/pages/contact.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!--seo-->
     <title>Contact Page</title>
-    <meta name="Contact page" content="This is my contact information">
+    <meta name="description" content="This is my contact information">
     <!--fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,6 +20,10 @@
     <link rel="stylesheet" href="portfolio.css">
 </head>
 
+<body>
+
+
+
 <h8>Work with me!</h8>
 <p> </p>
 <h9>Phone:</h9>
@@ -27,4 +31,5 @@
 <h9>Email:</h9>
 <p><a href="mailto:courtneymruddy@gmail.com">courtneymruddy@gmail.com</a></p>
 <h9>Instagram:</h9>
-<p><a href="https://www.instagram.com/courtney.ruddy/?hl=en">@courtneymruddy</a></p>
+<p><a href="https://www.instagram.com/courtney.ruddy/?hl=en">@courtneymruddy</a></p></body>
+</html>
