--- a/class/portfolio/index.html
+++ b/class/portfolio/index.html
@@ -7,12 +7,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!--seo-->
     <title>Courtney Ruddy Journalist</title>
-    <meta name="Courtney Resume and Portfolio" content="This is my resume and portfolio">
+    <meta name="description" content="This is my resume and portfolio">
     <!--fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap" rel="stylesheet">
-
     <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -22,15 +21,14 @@
 
 <body>
 
-    <nav class="nav">
-        <a href="./biography.html">Biography---</a>
-        <a href="./background.html">Background---</a>
-        <a href="./contact.html">Contact---</a>
-        <a href="./work.html">Work</a>
-    </nav>
-
     <div class="container">
 
+        <nav class="nav justify-content-end">
+            <a href="./biography.html">Biography</a>
+            <a href="./background.html">Background</a>
+            <a href="./contact.html">Contact</a>
+           <a href="./work.html">Work</a>
+    </nav>
         <div class="row align-items-center justify-content-evenly">
             <div class="col-lg-6">
                 <h1>Courtney Ruddy</h1>
@@ -40,11 +38,9 @@
             <div class="col-lg-6">
                 <img src="images/headshot.jpg" alt="Headshot" class="img-fluid">
             </div>
-
         </div>
-
     </div>
-
+    
     <!-- js -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
         integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
@@ -54,5 +50,4 @@
         crossorigin="anonymous"></script>
 
 </body>
-
 </html>
