--- a/class/portfolio/pages/background.html
+++ b/class/portfolio/pages/background.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!--seo-->
     <title>Background Page</title>
-    <meta name="Background page" content="This is my background and expertise">
+    <meta name="description" content="This is my background and expertise">
     <!--fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,6 +19,15 @@
     <!--css-->
     <link rel="stylesheet" href="portfolio.css">
 </head>
+
+<body>
+    <nav class="nav">
+        <a href="./biography.html">Biography---</a>
+        <a href="./background.html">Background---</a>
+        <a href="./contact.html">Contact---</a>
+        <a href="./work.html">Work</a>
+    </nav>
+
 
 <div class="container">
 
@@ -56,3 +65,5 @@
             </div>
 
         </div>
+    </body>
+    </html>
