--- a/class/portfolio/pages/biography.html
+++ b/class/portfolio/pages/biography.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!--seo-->
     <title>Biography Page</title>
-    <meta name="Biography page" content="This is my biography">
+    <meta name="description" content="This is my biography">
     <!--fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,12 +20,23 @@
     <link rel="stylesheet" href="portfolio.css">
 </head>
 
+<body style="background-color: #606046;">
+
+
+    <nav class="nav">
+        <a href="./biography.html">Biography---</a>
+        <a href="./background.html">Background---</a>
+        <a href="./contact.html">Contact---</a>
+        <a href="./work.html">Work</a>
+    </nav>
+
+
 <div class="container">
 
     <div class="row align-items-center justify-content-evenly">
         <div class="col-lg-6">
             
-        <body style="background-color: #606046;">
+
  
             <h3>BIOGRAPHY</h3>
             <h4>I am a University of Maryland, College Park senior, majoring in multi-platform journalism with a concentration in film. I began my journalism career with a mentorship program with Kare 11 News in Minneapolis. From there I started to direct and produce commercials for local businesses. In college I have been a staff writer for our campus women's magazine, as well as managed the social media accounts for different organizations on campus.</h4>
@@ -33,9 +44,9 @@
         <div class="col-lg-6">
             <h5>Writer, photographer, videographer, and social media manager.</h5>
 
-        </body>
         </div>
 
     </div>
-
+</body>
+    </html>
 
