--- a/class/portfolio/pages/contact.html
+++ b/class/portfolio/pages/contact.html
@@ -17,19 +17,24 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <!--css-->
-    <link rel="stylesheet" href="portfolio.css">
+    <link rel="stylesheet" href="./css/portfolio.css">
 </head>
 
-<body>
+<body class="light-bg">
+    <div class="container">
+        <nav class="nav">
+            <a href="./biography.html">Biography---</a>
+            <a href="./background.html">Background---</a>
+            <a href="./contact.html">Contact---</a>
+            <a href="./work.html">Work</a>
+        </nav>
+<div ckass="text-center">
+    <h3>Work with me!</h3>
+    <p>Phone: <a href="tel:9524637226">9524637226</a></p>
+    <p>Email: <a href="mailto:courtneymruddy@gmail.com">courtneymruddy@gmail.com</a></p>
+    <p>Instagram: <a href="https://www.instagram.com/courtney.ruddy/?hl=en">@courtneymruddy</a></p>
+    </div>
+</div>
+</body>
 
-
-
-<h8>Work with me!</h8>
-<p> </p>
-<h9>Phone:</h9>
-<p><a href="tel:9524637226">9524637226</a></p>
-<h9>Email:</h9>
-<p><a href="mailto:courtneymruddy@gmail.com">courtneymruddy@gmail.com</a></p>
-<h9>Instagram:</h9>
-<p><a href="https://www.instagram.com/courtney.ruddy/?hl=en">@courtneymruddy</a></p></body>
 </html>
