--- a/class/portfolio/index.html
+++ b/class/portfolio/index.html
@@ -16,19 +16,20 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <!--css-->
-    <link rel="stylesheet" href="portfolio.css">
+    <link rel="stylesheet" href="./css/portfolio.css">
 </head>
 
-<body>
+<body class="light-bg">
 
     <div class="container">
 
         <nav class="nav justify-content-end">
-            <a href="./biography.html">Biography</a>
-            <a href="./background.html">Background</a>
-            <a href="./contact.html">Contact</a>
-           <a href="./work.html">Work</a>
-    </nav>
+            <a href="./pages/biography.html">Biography</a>
+            <a href="./pages/background.html">Background</a>
+            <a href="./pages/contact.html">Contact</a>
+            <a href="./pages/work.html">Work</a>
+        </nav>
+
         <div class="row align-items-center justify-content-evenly">
             <div class="col-lg-6">
                 <h1>Courtney Ruddy</h1>
@@ -40,7 +41,7 @@
             </div>
         </div>
     </div>
-    
+
     <!-- js -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
         integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
@@ -50,4 +51,5 @@
         crossorigin="anonymous"></script>
 
 </body>
+
 </html>
