--- a/class/portfolio/pages/background.html
+++ b/class/portfolio/pages/background.html
@@ -17,36 +17,41 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <!--css-->
-    <link rel="stylesheet" href="portfolio.css">
+    <link rel="stylesheet" href="./css/portfolio.css">
 </head>
 
-<body>
-    <nav class="nav">
-        <a href="./biography.html">Biography---</a>
-        <a href="./background.html">Background---</a>
-        <a href="./contact.html">Contact---</a>
-        <a href="./work.html">Work</a>
-    </nav>
+<body class="light-bg">
 
 
-<div class="container">
+    <div class="container">
+        <nav class="nav justify-content-end">
+            <a href="./biography.html">Biography---</a>
+            <a href="./background.html">Background---</a>
+            <a href="./contact.html">Contact---</a>
+            <a href="./work.html">Work</a>
+        </nav>
 
-            <div class="row align-items-center justify-content-evenly">
+        <div class="row align-items-center justify-content-between">
                 <div class="col-lg-6">
-                    <h6>Background</h6>
+                    <h3>Background</h3>
+
+                    <p>Kare 11 Digital Journalism Mentorship Program 2017-2018</p>
+
                     <ul>
-                    <li>Spanish Immersion Bilinugal Diploma 2019</li>
-                    <li>Kare 11 Digital Journalism Mentorship Program 2017-2018</li>
-                    <li>Social Media Manager 2019-present</li>
-                    <li>Freelance Photographer 2015-present</li>
-                    <li>Staff Writer 2019-present</li>
-                    <li>BA Multi-Platform Journalism 2023</li>
+                        <li>Social Media Manager 2019-present</li>
+                        <li>Freelance Photographer 2015-present</li>
+                        <li>Staff Writer 2019-present</li>
+
                     </ul>
-                        
+                    <h3>Education</h3>
+                    <ul>
+                        <li>Spanish Immersion Bilinugal Diploma 2019</li>
+                        <li>BA Multi-Platform Journalism 2023</li>
+                    </ul>
                 </div>
                 <div class="col-lg-6">
-                    <h6>Expertise</h6>
-                        <ul>
+                    <h4>Expertise</h4>
+                    <ul>
                         <li>Adobe Creative Suite</li>
                         <li>Microsoft Office</li>
                         <li>Canva</li>
@@ -58,7 +63,7 @@
                         <li>Research</li>
                         <li>Social Media Analytics</li>
                         <li>Event Planning</li>
-                        </ul>
+                    </ul>
 
                 </div>
     
