--- a/class/portfolio/pages/biography.html
+++ b/class/portfolio/pages/biography.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,17 +11,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap" rel="stylesheet">
-
     <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <!--css-->
-    <link rel="stylesheet" href="portfolio.css">
+    <link rel="stylesheet" href="./css/portfolio.css">
 </head>
 
-<body style="background-color: #606046;">
-
-
+<body class="green dark-bg">
+    <div class="container">
     <nav class="nav">
         <a href="./biography.html">Biography---</a>
         <a href="./background.html">Background---</a>
@@ -30,23 +27,17 @@
         <a href="./work.html">Work</a>
     </nav>
 
+        <div class="row align-items-center justify-content-between">
 
-<div class="container">
-
-    <div class="row align-items-center justify-content-evenly">
-        <div class="col-lg-6">
-            
-
- 
             <h3>BIOGRAPHY</h3>
-            <h4>I am a University of Maryland, College Park senior, majoring in multi-platform journalism with a concentration in film. I began my journalism career with a mentorship program with Kare 11 News in Minneapolis. From there I started to direct and produce commercials for local businesses. In college I have been a staff writer for our campus women's magazine, as well as managed the social media accounts for different organizations on campus.</h4>
+            <div class="col-lg-6">
+                <p>I am a University of Maryland, College Park senior, majoring in multi-platform journalism with a concentration in film. I began my journalism career with a mentorship program with Kare 11 News in Minneapolis. From there I started to direct and produce commercials for local businesses. In college I have been a staff writer for our campus women's magazine, as well as managed the social media accounts for different organizations on campus.</p>
+            </div>
+            <div class="col-lg-5">
+                <p class= "emphasis">Writer, photographer, videographer, and social media manager.</p>
+            </div>
         </div>
-        <div class="col-lg-6">
-            <h5>Writer, photographer, videographer, and social media manager.</h5>
 
-        </div>
-
-    </div>
-</body>
-    </html>
+    </body>
+</html>
 
