--- a/class/portfolio/pages/work.html
+++ b/class/portfolio/pages/work.html
@@ -16,10 +16,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <!--css-->
-    <link rel="stylesheet" href="./css/portfolio.css">
+    <link rel="stylesheet" href="../css/portfolio.css">
 </head>
 
-<body class="dark-bg brown"
+<body class="dark-bg brown">
     <div class="container">
 
         <nav class="nav justify-content-end">
@@ -29,26 +29,25 @@
            <a href="./work.html">Work</a>
         </nav>
         
-        
         <div class="row align-items-center justify-content-evenly">
             <div class="col-lg-3"> 
                 <a href="https://www.hercampus.com/school/maryland/my-winter-curly-hair-care-routine/"><img 
-                    src="images/hair.jpg" alt="Hair Article" class="img-fluid"></a>
+                    src="../images/hair.jpg" alt="Hair Article" class="img-fluid"></a>
                 <p>Winter Curly Hair Care article, HerCampus.</p>
             </div>
             <div class="col-lg-3"> 
                 <a href="http://www.thecampustrainer.website/y2k-to-2010s-fashion-transition.html"><img 
-                    src="images/ct.jpg" alt="Campus Trainer" class="img-fluid"></a>
+                    src="../images/ct.jpg" alt="Campus Trainer" class="img-fluid"></a>
                 <p>Y2K Fashion article Campus Trainer Magazine.</p>
             </div>
             <div class="col-lg-3"> 
                 <a href="https://videopress.com/v/zqsIDgBN"><img 
-                    src="images/snap.jpg" alt="Snapology Commercial" class="img-fluid"></a>
+                    src="../images/snap.jpg" alt="Snapology Commercial" class="img-fluid"></a>
                 <p>Minneapolis Snapology commercial.</p>
             </div>
             <div class="col-lg-3"> 
                 <a href="https://www.hercampus.com/school/maryland/homesick-and-regular-sick/"><img 
-                    src="images/sick.jpg" alt="Mono Article" class="img-fluid"></a>
+                    src="../images/sick.jpg" alt="Mono Article" class="img-fluid"></a>
                 <p>Homesick & Regular Sick article HerCampus.</p>
             </div>
         </div>
