--- a/class/portfolio/pages/background.html
+++ b/class/portfolio/pages/background.html
@@ -17,17 +17,16 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <!--css-->
-    <link rel="stylesheet" href="./css/portfolio.css">
+    <link rel="stylesheet" href="../css/portfolio.css">
 </head>
 
 <body class="light-bg">
 
-
     <div class="container">
         <nav class="nav justify-content-end">
-            <a href="./biography.html">Biography---</a>
-            <a href="./background.html">Background---</a>
-            <a href="./contact.html">Contact---</a>
+            <a href="./biography.html">Biography</a>
+            <a href="./background.html">Background</a>
+            <a href="./contact.html">Contact</a>
             <a href="./work.html">Work</a>
         </nav>
 
@@ -35,7 +34,9 @@
                 <div class="col-lg-6">
                     <h3>Background</h3>
 
-                    <p>Kare 11 Digital Journalism Mentorship Program 2017-2018</p>
+                    <ul>
+                        <li>Kare 11 Digital Journalism Mentorship Program 2017-2018</li>
+                    </ul>
 
                     <ul>
                         <li>Social Media Manager 2019-present</li>
@@ -50,7 +51,7 @@
                     </ul>
                 </div>
                 <div class="col-lg-6">
-                    <h4>Expertise</h4>
+                    <h3>Expertise</h3>
                     <ul>
                         <li>Adobe Creative Suite</li>
                         <li>Microsoft Office</li>
