--- a/class/portfolio/pages/biography.html
+++ b/class/portfolio/pages/biography.html
@@ -15,15 +15,15 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <!--css-->
-    <link rel="stylesheet" href="./css/portfolio.css">
+    <link rel="stylesheet" href="../css/portfolio.css">
 </head>
 
 <body class="green dark-bg">
     <div class="container">
     <nav class="nav">
-        <a href="./biography.html">Biography---</a>
-        <a href="./background.html">Background---</a>
-        <a href="./contact.html">Contact---</a>
+        <a href="./biography.html">Biography</a>
+        <a href="./background.html">Background</a>
+        <a href="./contact.html">Contact</a>
         <a href="./work.html">Work</a>
     </nav>
 
